--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors game</title>
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
+ <h1>Lets play Rock, Paper, Siissors!</h1>
+ <div class="play-field">
+    <div>
+        <img src="./images/man-146638.svg" alt="image of person"/>
+    </div>
+    <div>
+        <img class="player-chose-rock" src="./images/rock.svg" alt="rock"/>
+        <img class="player-chose-paper" src="./images/paper.svg" alt="paper"/>
+        <img class="player-chose-scissors" src="./images/scissors-293988.svg" alt="scissors"/>    
+    </div>  
+    <div>
+        <img src="./images/swords-7846359.svg" alt="vs"/>      
+    </div>  
+    <div>
+        <img class="pc-chose-rock" src="./images/rock.svg" alt="rock"/>
+        <img class="pc-chose-paper" src="./images/paper.svg" alt="paper"/>
+        <img class="pc-chose-scissors" src="./images/scissors-293988.svg" alt="scissors"/> 
+    </div>  
+    <div>
+        <img src="./images/computer-159466.svg" alt="image of a computer"/>    
+    </div>    
+ </div>
+   
+ <div class="bottom-portion">
+    <div class="chooseYourWeapon"><h2>Choose your Weapon</h2> 
+    <div class="makeASelection">   
+        <button class="rockInput">rock</button>
+        <button class="paperInput">paper</button>
+        <button class="scissorsInput">scissors</button>
+    </div></div>
+    <div class="scoreBoard">
+
+    </div>
+ </div>
  
 <script src="script.js"></script>    
 </body>
