--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
  <div class="bottom-portion">
     <div class="chooseYourWeapon"><h2>Choose your Weapon</h2> 
     <div class="makeASelection">   
-        <button class="rockInput">rock</button>
-        <button class="paperInput">paper</button>
-        <button class="scissorsInput">scissors</button>
+        <button id="rockInput" class="rockInput">rock</button>
+        <button id="paperInput" class="paperInput">paper</button>
+        <button id="scissorsInput" class="scissorsInput">scissors</button>
     </div></div>
     <div class="scoreBoard">
 
