add in score counter to show in ui

--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
         <button id="scissorsInput" class="scissorsInput">scissors</button>
     </div></div>
     <div class="scoreBoard">
-
+       <Div  class="playerVsPcContainer">
+           <div>
+                <h1>Player Score</h1>
+                <p class="playerScoretxt"></p>
+            </div>
+            <div>
+                <h1>Computer Score</h1>
+                <p class="computerScoretxt"></p>
+            </div>
+        </Div>
     </div>
  </div>
  
