finish adding the ui
added the log that says the game result in the ui

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
- <h1>Lets play Rock, Paper, Siissors!</h1>
+ <h1>Lets play Rock, Paper, Scissors!</h1>
  <div class="play-field">
     <div>
         <img src="./images/man-146638.svg" alt="image of person"/>
@@ -15,7 +15,7 @@
     <div>
         <img class="player-chose-rock" src="./images/rock.svg" alt="rock"/>
         <img class="player-chose-paper" src="./images/paper.svg" alt="paper"/>
-        <img class="player-chose-scissors" src="./images/scissors-293988.svg" alt="scissors"/>    
+        <img class="player-chose-scissors" src="./images/hand-24473.svg" alt="scissors"/>    
     </div>  
     <div>
         <img src="./images/swords-7846359.svg" alt="vs"/>      
@@ -23,7 +23,7 @@
     <div>
         <img class="pc-chose-rock" src="./images/rock.svg" alt="rock"/>
         <img class="pc-chose-paper" src="./images/paper.svg" alt="paper"/>
-        <img class="pc-chose-scissors" src="./images/scissors-293988.svg" alt="scissors"/> 
+        <img class="pc-chose-scissors" src="./images/hand-24473.svg" alt="scissors"/> 
     </div>  
     <div>
         <img src="./images/computer-159466.svg" alt="image of a computer"/>    
@@ -47,7 +47,11 @@
                 <h1>Computer Score</h1>
                 <p class="computerScoretxt"></p>
             </div>
+
         </Div>
+            <div>
+                <p class="gamelog"></p>  
+            </div>
     </div>
  </div>
  
